MDEV-270: SHOW EXPLAIN: server crashes in JOIN::print_explain on a query with  select tables optimized away - Take into account, that for some degenerate joins instead of "join->table_count=0"   the code sets "join->tables_list=0".